# magic_moneyz

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
exampels/: graphical_UI.cpp  hello_world.cpp
examples/: CMakeLists.txt  graphical_UI.cpp  rng_gen.cpp
project/includes/: data_storage.hpp  order_executor.hpp  viewer.hpp
project/src/: data_storage.cpp  data_storage.hpp  main.cpp  order_executor.cpp  print.cpp  trading_gatway.cpp  trading_gatway.hpp  viewer.cpp  viewer.hpp
src/: data_fetcher.cpp  main.cpp
